# curb

./: .gitignore  README.md  docker-compose.yaml  package.json
.github/workflows/: deploy-bo-cast-fly-prod.yml  deploy-server-fly-prod.yml  main.yml  publish-bo-cast-release.yaml  publish-native-release.yaml
apps/monitor-web/: package.json
apps/monitor-web/src/atoms/: atoms.ts  theme.ts
apps/monitor-web/src/components/: CaptionLine.tsx  Captions.tsx  Layout.tsx  Preview.tsx  Settings.tsx  SocketProvider.tsx
apps/monitor-web/src/hooks/: useCaptionLines.ts
apps/monitor-web/src/pages/: _app.tsx  index.tsx  settings.tsx
apps/monitor-web/src/utils/: languages.ts
apps/native/: .env.development  .env.production  .eslintrc.js  index.html  package.json  settings.html  vite.config.ts
apps/native/src/: App.tsx  languages.ts  main.tsx  settings.tsx
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/icons/: icon.icns
apps/native/src/components/: CaptionLine.tsx  Captions.tsx  Settings.tsx  (+3 more)
apps/web/: package.json
services/bo-cast/: .gitignore  bo-cast.go  fly.toml  go.mod  go.sum  main.go  process.go  rooms.go  ssh.go  utils.go
services/bo-cast/files/: a.en.srt  terminator.en.srt  terminator.fa.srt.deactivated  terminator.he.srt.deactivated
services/server/: .env  .env.development  .env.example  .env.production  .gitignore  fly.toml  package.json  tsconfig.json
services/server/prisma/: schema.prisma
services/server/src/: Room.ts  RoomsManager.ts  Translator.ts  api.ts  fastifySocketIO.ts  index.ts  socketTransport.ts  types.d.ts
(+29 files in other folders)
